--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,14 @@ jobs:
           uses: actions/checkout@v4
          
         - name: Configure CMake
-          run: cmake -B ${{github.workspace}}/build
+          run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=RelWithDebInfo
          
         - name: Build
-          run: cmake --build ${{github.workspace}}/build
+          # Use --config to specify the build type for multi-config generators
+          run: cmake --build ${{github.workspace}}/build --config RelWithDebInfo
           
         - name: Run tests
           working-directory: ${{github.workspace}}/build
-          run: ctest -C Release --output-on-failure
+          run: ctest -C RelWithDebInfo --output-on-failure
         
         
