Improve console animation (#4)
* refactor: remove custom source dir from cmake config

* improve: game animation in console, game board centered

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,21 +36,20 @@ if(GAMEOFLIFE_BUILD_TESTS)
   enable_testing()
 endif()
 
-set(GAMEOFLIFE_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
-
 include(src/app/app.cmake)
 include(src/core/core.cmake)
 include(src/io/io.cmake)
+include(src/render/render.cmake)
 
 add_executable(GameOfLife 
     ${CORE_SOURCES}
     ${IO_SOURCES}
+    ${RENDER_SOURCES}
     ${APP_SOURCES}
 )
 
-target_include_directories(GameOfLife PRIVATE 
-    ${GAMEOFLIFE_SOURCE_DIR}/core
-    ${GAMEOFLIFE_SOURCE_DIR}/io
+target_include_directories(GameOfLife PRIVATE
+    ${PROJECT_SOURCE_DIR}/src
 )
 
 include(GNUInstallDirs)
