--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Configure CMake
         if: matrix.os != 'macos-latest'
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DGAMEOFLIFE_BUILD_TESTS=OFF -DGAMEOFLIFE_BUILD_TOOLS=OFF
+        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DGAMEOFLIFE_BUILD_TESTS=OFF -DGAMEOFLIFE_BUILD_TOOLS=OFF -DGAMEOFLIFE_BUILD_BENCHMARK=OFF
         
       - name: Configure CMake for macOS Universal Binary
         if: matrix.os == 'macos-latest'
@@ -29,6 +29,7 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release
           -DGAMEOFLIFE_BUILD_TESTS=OFF
           -DGAMEOFLIFE_BUILD_TOOLS=OFF
+          -DGAMEOFLIFE_BUILD_BENCHMARK=OFF
           -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
       
       - name: Build Executables
