--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Configure CMake
         if: matrix.os != 'macos-latest'
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DGAMEOFLIFE_BUILD_TESTS=OFF -DGAMEOFLIFE_BUILD_TOOLS=OFF
+        run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DGAMEOFLIFE_BUILD_TESTS=OFF -DGAMEOFLIFE_BUILD_TOOLS=OFF -DGAMEOFLIFE_BUILD_BENCHMARK=OFF
         
       - name: Configure CMake for macOS Universal Binary
         if: matrix.os == 'macos-latest'
@@ -29,6 +29,7 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release
           -DGAMEOFLIFE_BUILD_TESTS=OFF
           -DGAMEOFLIFE_BUILD_TOOLS=OFF
+          -DGAMEOFLIFE_BUILD_BENCHMARK=OFF
           -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"
       
       - name: Build Executables
@@ -76,7 +77,7 @@ jobs:
           echo "Creating archives..."
           cd artifacts/game-executables-ubuntu-latest && tar -czvf ../../GameOfLife-Linux.tar.gz . && cd ../..
           cd artifacts/game-executables-macos-latest && tar -czvf ../../GameOfLife-macOS.tar.gz . && cd ../..
-          cd artifacts/game-executables-windows-latest && zip ../../GameOfLife-Windows.zip ./* && cd ../..
+          cd artifacts/game-executables-windows-latest && zip -r ../../GameOfLife-Windows.zip . && cd ../..
 
       - name: Create Release and Upload Assets
         uses: softprops/action-gh-release@v2
